[package]
name = "isolated-crypto-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { workspace = true }
k256 = { workspace = true }
layer-wasi = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:isolated-crypto-demo"

[package.metadata.component.target.dependencies]
"lay3r:avs" = "0.3.0"
"component:isolated-crypto" = { path = "../isolated-crypto/wit/engine.wit" }

[package.metadata.component.dependencies]
