[package]
name = "isolated-crypto-engine"
version = "0.2.0"
edition = "2021"

[dependencies]
bip32 = "0.5.2"
hex = "0.4.3"
k256 = "0.13.4"
rfc6979 = "0.4.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
typenum = "1.17.0"
wit-bindgen-rt = { version = "0.33.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "mrnerdhair:isolated-crypto-engine"
target = "mrnerdhair:isolated-crypto/engine@0.14.0"

[package.metadata.component.dependencies]
