[package]
name = "isolated-crypto-engine"
version = "0.2.0"
edition = "2021"

[dependencies]
bip32 = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
rfc6979 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
typenum = { workspace = true }
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:isolated-crypto-engine"
target = { path = "../wit/engine.wit", world = "engine" }

[package.metadata.component.dependencies]
