[package]
name = "isolated-crypto-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:isolated-crypto-provider"
target = { path = "../wit/engine.wit", world = "mnemonic-provider-world" }

[package.metadata.component.dependencies]
